don't stopMousePolling when not started

REVIEW: 108536
BUG: 313655